Bug 295451 - Dead Link in Help->About Kigo
Summary: Dead Link in Help->About Kigo
Status: RESOLVED FIXED
Alias: None
Product: kigo
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.5.6
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: Sascha Peilicke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-07 05:25 UTC by Clark Wierda
Modified: 2017-04-22 19:50 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Patch for main.cpp with new URL (522 bytes, patch)
2012-03-14 04:04 UTC, Clark Wierda
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Clark Wierda 2012-03-07 05:25:03 UTC
User-Agent:       Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:10.0.2) Gecko/20100101 Firefox/10.0.2
Build Identifier: 

URL in About Kigo dialogue, http://games.kde.org/kigo, results in a 404.

I propose the following URL as a replacement:  http://www.kde.org/applications/games/kigo/

Reproducible: Always

Steps to Reproduce:
1. Start Program
2. Click Help from menu line
3. Click About Kigo in Help Menu
4. Click the live URL, http://games.kde.org/kigo
Actual Results:  
In Kubuntu, rekonq will open and eventually give a 404 Not Found error.

Manually entering the URL into FireFox generates the same result.

Expected Results:  
A live website should have been present with additional information on Kigo.

Version of Kigo is 0.5.6
Comment 1 Clark Wierda 2012-03-14 04:04:25 UTC
Created attachment 69599 [details]
Patch for main.cpp with new URL

This just changes the destination of the link for Kigo.

I used http://www.kde.org/applications/games/kigo/ which was good on 14 March 2012 (today as I am sending this).
Comment 2 Frederik Schwarzer 2012-03-14 09:52:43 UTC
Emil, could you comment on this? Most (all?) games point to this location. Most links are working but it looks like the page is supposed to be deprecated. The link Clark uses also works for all games and seems to point to a newer page.

What's the way to go here?
Comment 3 Emil Sedgh 2012-03-21 15:17:29 UTC
Issue is that Kigo has no entry in games.kde.org.
I initially hoped that game developers would take care of their game's data o games.k.o, but its not the case.
I will add Kigo's data to games.k.o, but it might take a while as Im busy with many other parts and I dont have a checkout of kdegames.
Comment 4 Clark Wierda 2015-04-30 01:00:16 UTC
Link is still dead in version 0.5.6 available in the repository for Kubuntu 15.04.

My proposed patch still points at useful information.

Accepting that the existing page is deprecated, the proper fix is to update the games.k.o site with the current data.  Is there a proper place to report this with respect to that website?
Comment 5 Luigi Toscano 2017-04-22 19:50:38 UTC
Git commit 6adf77ba61c11b30ae3a3947d8a4bd3b52198fb6 by Luigi Toscano.
Committed on 22/04/2017 at 19:48.
Pushed by ltoscano into branch 'master'.

Add few application metadata and fix homepage

- explicit organization domain (basically required) and desktop file name;
- fix the homepage (the existing link never worked; while waiting for
  a link on games.kde.org which may never come, use the general page
  on kde.org).

M  +3    -1    src/main.cpp

https://commits.kde.org/kigo/6adf77ba61c11b30ae3a3947d8a4bd3b52198fb6