Add few application metadata and fix homepage

- explicit organization domain (basically required) and desktop file name;
- fix the homepage (the existing link never worked; while waiting for
  a link on games.kde.org which may never come, use the general page
  on kde.org).

BUG: 295451