src/main.cpp
@@ -61,7 +61,9 @@ int main(int argc, char *argv[])
                         QStringLiteral("yurchor@ukr.net"));
     aboutData.addCredit(i18n("Arturo Silva"), i18n("Default theme designer"),
                         QStringLiteral("jasilva28@gmail.com"));
-    aboutData.setHomepage(QStringLiteral("http://games.kde.org/kigo"));
+    aboutData.setHomepage(QStringLiteral("https://www.kde.org/applications/games/kigo/"));
+    aboutData.setOrganizationDomain(QByteArray("kde.org"));
+    aboutData.setDesktopFileName(QStringLiteral("org.kde.kigo"));
 
     QCommandLineParser parser;
     KAboutData::setApplicationData(aboutData);
